# reduction

./: CMakeLists.txt  README.md
extras/: reduc1.cu  timinggpu.cu  timinggpu.cuh
includes/: utils.cuh
source/: reduc.cu
